= RSpec Changelog

== Version 0.8.0 (Not yet released)
This release improves the spec command line by adding DRb support and making it possible to
store command line options in a file. This means a more flexible RSpec experience with Rails, 
Rake and editor plugins like TextMate.

It also introduces a new approach to handling should expectations. See SYNTAX_CHANGES.

* Applied [#8008] Correct generated specs for view when calling resource generator (Patch from Jonathan Tron)
* Fixed [#7754] Command-R fails to run spec in TextMate (added instruction from Luke Redpath to the website)
* Fixed [#7826] RSpect.tmbundle web page out of date.
* RSpec on Rails specs are now running against RoR 1.2.1
* rspec_resource now generates specs for views (TODO: make them use the new assert_select, when it's documented)
* In a Rails app, RSpec core is only loaded when RAILS_ENV==test (init.rb)
* Added support for target.should arbitrary_expectation_handler and target.should_not arbitrary_expectation_handler
* Fixed [#7533] Spec suite fails and the process exits with a code 0
* Fixed [#7565] Subsequent stub! calls for method fail to override the first call to method
* Applied [#7524] Incorrect Documentation for 'pattern' in Rake task (patch from Stephen Duncan)
* Fixed [#7409] default fixtures do not appear to run.
* Fixed [#7507] "render..and return" doesn't return
* Fixed [#7509] rcov/rspec incorrectly includes boot.rb (Patch from Courtenay)
* Fixed [#7506] unnecessary complex output on failure of response.should_be_redirect
* Applied [#6098] Make scaffold_resource generator. Based on code from Pat Maddox.
* The drbspec command is gone. Use spec --drb instead.
* The drb option is gone from the Rake task. Pass --drb to spec_opts instead.
* New -X/--drb option for running specs against a server like spec/rails' script/rails_spec_server
* New -O/--options and -G/--generate flags for file-based options (handy for spec/rails)
* Applied [#7339] Turn off caching in HTML reports