@@ -1,43 +1,0 @@
-Moving from 0.7.5 to 0.8 will require the following syntax changes, which we should
-support with a translation script:
-
-###################################################
-#before
-actual.should_equal expected
-actual.should_not_equal expected
-
-#after
-actual.should equal(expected)
-actual.should_not equal(expected)
-
-This change applies to all of these as well:
-should_equal
-should_eql
-should_be_close
-should_include
-
-###################################################
-#before
-team.should_have(3).players
-
-#after
-team.should have(3).players
-
-###################################################
-#before
-true.should_be true
-
-#after
-true.should be(true)
-
-This change applies to:
-should_be true
-should_be false
-should_be nil
-
-###################################################
-#before
-true.should_be_arbitrary_predicate
-
-#after
-true.should be(:arbitrary_predicate)
